# SDLTemplateCmake

./: CMakeLists.txt  README.md  main.cc
